fix: Alignment on different picker modes

--- a/src/Vue3DatePicker/style/components/_Calendar.scss
+++ b/src/Vue3DatePicker/style/components/_Calendar.scss
@@ -1,8 +1,3 @@
-.dp__calendar_wrapper {
-    display: flex;
-    box-sizing: border-box;
-    flex-direction: row;
-}
 .dp__calendar_wrap {
     display: flex;
     justify-content: center;
