--- a/src/Vue3DatePicker/style/components/_DatepickerMenu.scss
+++ b/src/Vue3DatePicker/style/components/_DatepickerMenu.scss
@@ -23,11 +23,6 @@
     box-sizing: border-box;
 }
 
-.dp__calendar_wrapper {
-    display: flex;
-    flex-direction: column;
-}
-
 .dp__arrow_top {
     left: 50%;
     top: -1px;
